fixed BookView page's background to stretch full page. Tried out Material UI's delete button with dustbin icon, but it didn't work. Made BookCreate form fields responsive for different devices.

--- a/src/MyComponents/BookCreate.css
+++ b/src/MyComponents/BookCreate.css
@@ -2,6 +2,19 @@
     position: relative;
   }
   
+  @media screen and (max-width: 600px) {/*Galaxy Z Fold 4*/
+    .responsivelayout {
+      width: 100%;
+      /*margin-top: 0;*/
+    }
+  }
+  @media screen and (min-width: 601px) {/*Galaxy Z Fold 4*/
+    .responsivelayout {
+      width: 60%;
+      /*margin-top: 0;*/
+    }
+  }
+  
   .star-rating { /*dashed-box*/
     position: relative;
     z-index: 3;
@@ -20,6 +33,7 @@
   }
   .input-box-rating { /*green-box*/
     position: absolute;
+    width: 0%;
     z-index: 1; /* put .green-box above .dashed-box */
     /* width: 20%; */
     left: 0%;
